--- a/Scene2/index.html
+++ b/Scene2/index.html
@@ -101,7 +101,7 @@
 			<visual-novel>
 				<language-selection-screen></language-selection-screen>
 				<loading-screen></loading-screen>
-				<main-screen>
+				<main-screen style="background-image: url(../Scene2/assets/scenes/printShop.png	);">
 					<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
