--- a/Scene1/index.html
+++ b/Scene1/index.html
@@ -101,7 +101,7 @@
 			<visual-novel>
 				<language-selection-screen></language-selection-screen>
 				<loading-screen></loading-screen>
-				<main-screen style="background-image: url(../Scene1/assets/scenes/officeCabinet.png);">
+				<main-screen style="background-image: url(img/officeCabinet.png);">
 					<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
